refactor: change accent color, add fonts

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-radius="lg">
   <head>
     <meta charset="UTF-8" />
-    <title>Electron</title>
+    <title>Synapse</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
@@ -10,7 +10,7 @@
     />
   </head>
 
-  <body class="bg-[--color-gray-1] select-none">
+  <body class="bg-base select-none antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
