refactor: build up styles with some demo ui

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-radius="lg">
+<html lang="en" data-radius="lg" class="dark">
   <head>
     <meta charset="UTF-8" />
     <title>Synapse</title>
@@ -10,7 +10,7 @@
     />
   </head>
 
-  <body class="bg-base select-none antialiased">
+  <body class="bg-page-soft select-none antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
