refactor: style chages

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -10,7 +10,7 @@
     />
   </head>
 
-  <body class="bg-page-soft select-none antialiased">
+  <body class="bg-page select-none antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
